--- a/main/templates/staff/staff_session/data/data_card.html
+++ b/main/templates/staff/staff_session/data/data_card.html
@@ -53,10 +53,10 @@
             <div class="col-md text-center">
                 <button type="button"
                         class="btn btn-outline-primary"
-                        v-on:click = "downloadPaymentData()"
+                        v-on:click = "downloadChatData()"
                         title="Download Recruiter Data"
                         v-bind:disabled="reconnecting || working || session.started==false">
-                    Download Earnings <i class="fas fa-scroll"></i>
+                    Download Chat <i class="fas fa-scroll"></i>
                 </button>
             </div>
         </div>
