--- a/main/templates/staff/staff_session/graph/graph_card.html
+++ b/main/templates/staff/staff_session/graph/graph_card.html
@@ -1,6 +1,6 @@
 <div class="card" id="graph_card_id">                  
     <div class="card-header fw-bold">                
-        <span class="align-middle">Chat</span>           
+        <span class="align-middle">Graph</span>           
         
         <span class="float-end">
             <span v-show="reconnecting" class="me-1">
@@ -15,25 +15,6 @@
     </div>
     <div class="card-body">
         
-        <!-- chat -->
-        <div class="row">
-            <div class="col">
-                
-                <div class="d-flex flex-column">
-                    <div class="p-1" v-for="(c, index) in chat_list_to_display" v-bind:key="c.id">
-
-                        <div class="text-start ps-2 pe-2" 
-                             v-bind:style= "[(c.text=='|') ? {'opacity': '0'}:{}]"
-                             v-bind:id="'chat_id_' + c.id">
-                            
-                             <span class="fw-bold">[[c.sender_label]]:</span> [[c.text]]
-                             
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-        </div>       
+               
     </div>                    
 </div> 
