--- a/main/templates/staff/staff_session/subjects/view_subject_modal.html
+++ b/main/templates/staff/staff_session/subjects/view_subject_modal.html
@@ -5,7 +5,7 @@
 <div class="modal-dialog modal-xl">
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title">View Subject</h5>
+            <h5 class="modal-title">View Subject: [[session.session_players[current_subject].name]]</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
