--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -92,7 +92,7 @@
         </div>       
         <div class="row text-end fw-bold" v-if="session_player.survey_link != ''">            
 
-            <div class="col mt-2" v-if="fitbit_error_message ==''">              
+            <div class="col mt-2">              
                 Complete the survey before check in: <a v-bind:href="session_player.survey_link" target="_blank">Open Survey</a>
             </div>                                 
         </div>
