--- a/main/templates/subject/subject_home/graph/graph_card.html
+++ b/main/templates/subject/subject_home/graph/graph_card.html
@@ -10,7 +10,7 @@
                 Connecting <i class="fas fa-cog fa-spin fa-1x"></i>
             </span>
 
-            <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDoc('{{subject_graph_help_doc}}')">
+            <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDocSubject('{{subject_graph_help_doc}}')">
                 <i class="far fa-question-circle"></i> 
             </button>
         </span>
