--- a/main/templates/staff/staff_session.html
+++ b/main/templates/staff/staff_session.html
@@ -67,6 +67,7 @@
 {% block content %}
 
 <!-- modals -->
+<div v-if="session">
 {%include "help_modal.html"%}
 {%include "staff/staff_session/session/edit_session_modal.html"%}
 {%include "staff/staff_session/subjects/edit_subject_modal.html"%}
@@ -74,10 +75,10 @@
 {%include "staff/staff_session/subjects/view_subject_chat_modal.html"%}
 {%include "staff/staff_session/subjects/upload_email_list.html"%}
 {%include "staff/staff_session/control/sendInvitationModal.html"%}
-
+</div>
 <!-- cards -->
 
-<div class="row justify-content-lg-center mt-4" v-cloak>
+<div class="row justify-content-lg-center mt-4" v-cloak v-if="session">
     <div class="col-md-9">
         <div class="row">
             <div class="col mb-2">
@@ -121,6 +122,12 @@
             </div>                
         </div>
                                            
+    </div>
+</div>
+
+<div class="row justify-content-lg-center mt-4" v-else>
+    <div class = "col mt-4 text-center">
+        <i class="fas fa-cog fa-spin fa-2x"></i>
     </div>
 </div>
 
