--- a/main/templates/staff/staff_session.html
+++ b/main/templates/staff/staff_session.html
@@ -30,10 +30,11 @@
 
 <style>
 
-    canvas {
-        background-color: white; 
-        width: 100%;
-        height: 600px;
+    .graph {
+
+    background-color: white; 
+    border-style: solid;
+    border-width: 1px;
     }
 
     .player_table_row {
