--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -18,7 +18,6 @@
     }
 
     .graph {
-
         background-color: white; 
         border-style: solid;
         border-width: 1px;
@@ -33,6 +32,14 @@
         display:flex; 
         flex-direction:column-reverse;
     }
+
+    .conset_form{
+        width: 100%;
+        height: 600px;
+        background-color:black; 
+        border-style: solid;
+        border-width: 1px;
+    }
        
 </style>
 
@@ -42,6 +49,7 @@
 
 <!-- modals -->
 {%include "help_modal.html"%}
+{%include "subject/subject_home/consent_modal.html"%}
 
 <!-- show only on virtical phone -->
 <div class="d-sm-none">
@@ -134,6 +142,14 @@
                     <span class="align-middle">v[[software_version]]</span>
                 </div>  
             </div>
+            
+            <div class="row justify-content-center pt-0 mt-0">
+                <div class="col-md text-end">
+                    <button type="button" class="btn btn-link text-muted text-end m-0 p-0" title="Consent Form" v-on:click="showConsentForm()">
+                        Consent Form 
+                     </button>
+                </div>  
+            </div>           
         </div>
 
     </div>
