--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -106,7 +106,7 @@
     </div>
     
     <div class="row justify-content-center mt-3">
-        <div class="col-lg-5" v-cloak v-if="session.enable_chat && first_load_done">
+        <div class="col-lg-5" v-cloak v-if="session.enable_chat && !session.is_after_last_period && session.started && !session.is_before_first_period && !session_player.disabled">
             <div class="row justify-content-center" >
                 <div class="col-lg mb-3 mb-lg-0">
                     {%include "subject/subject_home/chat/chat_card.html"%}   
