consent form dev

--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -48,10 +48,13 @@
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1">
                                     Color
-                                </th>  
+                                </th>                                  
                                 <th scope="col" class = "text-center m-1 p-1">
                                     Active
-                                </th>                                                
+                                </th>  
+                                <th scope="col" class = "text-center m-1 p-1">
+                                    Consent
+                                </th>                                              
                                 <th scope="col" class = "text-center m-1 p-1">
                                     Shareable<br>Login Link
                                 </th> 
@@ -93,13 +96,21 @@
                                     [[p.parameter_set_player.display_color]]
                                 </td>      
                                 <td class="player_table_cell text-nowrap" v-on:click="showEditSubject(p.id)">
-                                    <span v-if="!p.disabled > 0" style="color: lightgreen;">
+                                    <span v-if="!p.disabled" style="color: lightgreen;">
                                         <i class="fas fa-check"></i>
                                     </span>
                                     <span v-else style="color: crimson;">
                                         <i class="fas fa-times"></i>
                                     </span>
-                                </td>                                                  
+                                </td>  
+                                <td class="player_table_cell text-nowrap">
+                                    <span v-if="!p.consent_form_required" style="color: lightgreen;">
+                                        <i class="fas fa-check"></i>
+                                    </span>
+                                    <span v-else style="color: crimson;">
+                                        <i class="fas fa-times"></i>
+                                    </span>
+                                </td>                                                
                                 <td class="player_table_cell text-nowrap">
                                     <a v-bind:href="p.login_link">Login Link</a>
                                 </td>
