--- a/main/templates/staff/staff_session/control/sendInvitationModal.html
+++ b/main/templates/staff/staff_session/control/sendInvitationModal.html
@@ -25,7 +25,7 @@
                     <div class="col">
                         Email list: 
                         <span v-for="(p, index) in session.session_players" v-bind:key="p.id" v-if="session">
-                            <span v-if="p.email != ''">[[p.email]][[(session.session_players.length-1>index) ? ', ':'']]</span>
+                            <span v-if="p.email != '' && !p.disabled">[[p.email]][[(session.session_players.length-1>index) ? ', ':'']]</span>
                         </span>
                     </div>
                 </div>               
