--- a/main/templates/staff/staff_session/graph/graph_card.html
+++ b/main/templates/staff/staff_session/graph/graph_card.html
@@ -6,7 +6,9 @@
         </span>        
 
         <span class="float-end">
-           
+            <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDoc('Staff Graph')">
+                <i class="far fa-question-circle"></i> 
+            </button>
         </span>
     </div>
     <div class="card-body">
