--- a/main/templates/staff/staff_session/payments/payments_card.html
+++ b/main/templates/staff/staff_session/payments/payments_card.html
@@ -5,7 +5,7 @@
         </span>       
 
         <span class="float-end">            
-            <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDoc('Staff Subject List')">
+            <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDoc('Staff Payments')">
                 <i class="far fa-question-circle"></i> 
             </button>
         </span>          
