--- a/main/templates/staff/staff_session_parameters/zone_minutes/zone_minutes_card.html
+++ b/main/templates/staff/staff_session_parameters/zone_minutes/zone_minutes_card.html
@@ -5,7 +5,7 @@
         </span>  
         
         <span class="float-end">
-            <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDoc('Staff Parameters Periods')">
+            <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDoc('Staff Parameters Zone Minutes')">
                 <i class="far fa-question-circle"></i> 
             </button>
         </span>
